--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -8,7 +8,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "init": "git init && npm i",
+    "init": "git init && npm i && jspm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -19,10 +19,10 @@
     "babel-register": "^6.7.2",
     "browser-sync": "^2.13.0",
     "del": "^2.2.0",
-    "eslint-config-airbnb": "^9.0.1",
+    "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.8.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-load-plugins": "^1.2.2",
@@ -49,6 +49,10 @@
     "dependencies": {},
     "devDependencies": {
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
+    },
+    "peerDependencies": {
+      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
+      "process": "github:jspm/nodelibs-process@^0.2.0-alpha"
     }
   }
 }
