--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -9,25 +9,25 @@
   "license": "MIT",
   "scripts": {
     "init": "git init && npm i",
-    "post-install": "jspm install",
+    "postinstall": "jspm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "browser-sync": "^2.13.0",
-    "del": "^2.2.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.11.6",
+    "browser-sync": "^2.14.0",
+    "del": "^2.2.1",
     "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-import": "^1.12.0",
     "git-hooks": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
-    "gulp-load-plugins": "^1.2.2",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
@@ -38,7 +38,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "jsdoc": "^3.4.0",
-    "jspm": "^0.17.0-beta.21",
+    "jspm": "^0.17.0-beta.25",
     "loke-jsdoc-theme": "^2.1.0"
   },
   "dependencies": {},
@@ -50,10 +50,11 @@
     },
     "dependencies": {},
     "devDependencies": {
-      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
+      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.13"
     },
     "peerDependencies": {
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
+      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
       "process": "github:jspm/nodelibs-process@^0.2.0-alpha"
     }
   }
