--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "<%= moduleSafeName %>",
+  "name": "htz-boilerplate",
   "version": "0.0.1",
-  "description": "<%= moduleDescription %>",
+  "description": "htz-boilerplate",
   "repository": {
     "type": "git",
-    "url": "https://github.com/haaretz/<%= moduleSafeName %>"
+    "url": "https://github.com/haaretz/htz-boilerplate"
+  },
+  "author": {
+    "name": "Elia Grady",
+    "email": "admin@eliagrady.com"
   },
   "license": "MIT",
   "scripts": {
@@ -19,15 +23,33 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "del": "^2.2.2",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
     "git-hooks": "^1.1.6",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "browser-sync": "^2.13.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "del": "^2.2.0",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.8.1",
+    "git-hooks": "^1.1.0",
     "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.1",
     "gulp-ignore": "^2.0.1",
+    "gulp-istanbul": "^1.1.0",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-mocha": "^3.0.1",
     "gulp-newer": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
@@ -36,10 +58,29 @@
     "gulp-shell": "^0.5.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-task-listing": "^1.0.1",
     "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
     "jsdoc": "^3.4.2",
+    "jsdom": "^9.4.2",
     "jspm": "^0.17.0-beta.31",
-    "loke-jsdoc-theme": "^2.1.0"
+    "jspm": "^0.17.0-beta.21",
+    "karma": "^1.2.0",
+    "loke-jsdoc-theme": "^2.1.0",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^3.3.1",
+    "rollup-plugin-filesize": "^0.4.4",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-stub": "^1.1.0",
+    "rollup-plugin-typescript": "^0.7.7",
+    "rollup-plugin-uglify": "^1.0.1",
+    "rollup-stream": "^1.11.0",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {},
   "jspm": {
