--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "init": "git init && npm i",
     "postinstall": "jspm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -29,26 +29,14 @@
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
     "git-hooks": "^1.1.6",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "browser-sync": "^2.13.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "del": "^2.2.0",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.8.1",
-    "git-hooks": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.1",
     "gulp-ignore": "^2.0.1",
     "gulp-istanbul": "^1.1.0",
-    "gulp-load-plugins": "^1.3.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-mocha": "^3.0.1",
     "gulp-newer": "^1.3.0",
     "gulp-plumber": "^1.1.0",
@@ -64,7 +52,6 @@
     "jsdoc": "^3.4.2",
     "jsdom": "^9.4.2",
     "jspm": "^0.17.0-beta.31",
-    "jspm": "^0.17.0-beta.21",
     "karma": "^1.2.0",
     "loke-jsdoc-theme": "^2.1.0",
     "rollup-plugin-babel": "^2.6.1",
@@ -95,7 +82,6 @@
     },
     "peerDependencies": {
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
-      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
       "process": "github:jspm/nodelibs-process@^0.2.0-alpha"
     }
   }
