testing an npm and jspm only module

--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -19,12 +19,12 @@
     "prepublish": "npm run build",
     "build": "npm run build:jspm",
     "build:jspm": "npm run clean && mkdirp dist && npm run build:jspm:dev && npm run build:jspm:prod && npm run build:jspm:es6",
-    "build:jspm:dev": "jspm build src/index.js dist/<%= moduleSafeName %>.js --format global --global-name DFP --source-map-contents",
+    "build:jspm:dev": "jspm build src/index.js dist/<%= moduleSafeName %>.js --format global --global-name <%= moduleUppercaseName %> --source-map-contents",
     "build:jspm:prod": "jspm build src/index.js dist/<%= moduleSafeName %>.min.js --minify --source-map-contents",
     "build:jspm:es6": "jspm build src/index.js dist/<%= moduleSafeName %>.es6.js --format esm --source-map-contents",
     "lint": "eslint ./src/**/*.js",
     "lint:tests": "eslint ./src/**/*__tests__*/**/*.js",
-    "lint:source": "eslint src/",
+    "lint:source": "eslint src/"
   },
   "main": "dist/<%= moduleSafeName %>.min.js",
   "jsnext:main": "src/index.js",
