--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "init": "git init && npm i",
     "test": "npm run test:browser",
-    "test:browser": "karma start config/karma.conf.js --no-auto-watch",
+    "test:browser": "karma start ./karma.conf.js --no-auto-watch",
     "postinstall": "jspm install",
     "prepublish": "npm run build",
     "build": "npm run build:jspm",
@@ -24,7 +24,8 @@
     "build:jspm:es6": "jspm build src/index.js dist/<%= moduleSafeName %>.es6.js --format esm --source-map-contents",
     "lint": "eslint ./src/**/*.js",
     "lint:tests": "eslint ./src/**/*__tests__*/**/*.js",
-    "lint:source": "eslint src/"
+    "lint:source": "eslint src/",
+    "clean": "rimraf coverage/ dist/"
   },
   "main": "dist/<%= moduleSafeName %>.min.js",
   "jsnext:main": "src/index.js",
@@ -32,36 +33,62 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-eslint": "^7.0.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "del": "^2.2.2",
+    "dirty-chai": "^1.2.2",
+    "es-module-loader": "^1.3.5",
+    "eslint": "^3.11.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-react": "^6.7.1",
     "git-hooks": "^1.1.6",
+    "glob": "^7.0.0",
     "isparta": "^4.0.0",
+    "isparta-loader": "^2.0.0",
+    "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
     "jsdom": "^9.4.2",
     "jspm": "^0.17.0-beta.31",
     "karma": "^1.2.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserstack-launcher": "^1.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "douglasduteil/karma-coverage#next",
+    "karma-coveralls": "^1.1.2",
+    "karma-dirty-chai": "^1.0.2",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jspm": "^2.2.0",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "loke-jsdoc-theme": "^2.1.0",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^3.3.1",
-    "rollup-plugin-filesize": "^0.4.4",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-stub": "^1.1.0",
-    "rollup-plugin-typescript": "^0.7.7",
-    "rollup-plugin-uglify": "^1.0.1",
-    "rollup-stream": "^1.11.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^3.0.0",
+    "mocha-jsdom": "^1.1.0",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-browser": "^0.92.10",
+    "npm-check-updates": "^2.5.8",
+    "phantomjs-prebuilt": "^2.1.4",
+    "pre-commit": "^1.1.2",
+    "rimraf": "^2.5.2",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "rimraf": "^2.5.2",
-    "mkdirp": "^0.5.1"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {},
   "jspm": {
@@ -73,11 +100,31 @@
     },
     "dependencies": {},
     "devDependencies": {
-      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.13"
+      "chai": "npm:chai@^3.5.0",
+      "es-module-loader": "npm:es-module-loader@^1.3.5",
+      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
     },
     "peerDependencies": {
-      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
-      "process": "github:jspm/nodelibs-process@^0.2.0-alpha"
+      "assert": "npm:jspm-nodelibs-assert@^0.2.0",
+      "buffer": "npm:jspm-nodelibs-buffer@^0.2.0",
+      "constants": "npm:jspm-nodelibs-constants@^0.2.0",
+      "crypto": "npm:jspm-nodelibs-crypto@^0.2.0",
+      "events": "npm:jspm-nodelibs-events@^0.2.0",
+      "fs": "npm:jspm-nodelibs-fs@^0.2.0",
+      "os": "npm:jspm-nodelibs-os@^0.2.0",
+      "path": "npm:jspm-nodelibs-path@^0.2.0",
+      "process": "npm:jspm-nodelibs-process@^0.2.0",
+      "stream": "npm:jspm-nodelibs-stream@^0.2.0",
+      "string_decoder": "npm:jspm-nodelibs-string_decoder@^0.2.0",
+      "util": "npm:jspm-nodelibs-util@^0.2.0",
+      "vm": "npm:jspm-nodelibs-vm@^0.2.0"
+    },
+    "overrides": {
+      "npm:inherits@2.0.3": {
+        "ignore": [
+          "test.js"
+        ]
+      }
     }
   }
 }
