Add watch and serve scripts

--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -12,31 +12,38 @@
   },
   "license": "MIT",
   "scripts": {
-    "init": "git init && npm i",
-    "test": "npm run test:browser",
-    "test:browser": "karma start ./karma.conf.js --no-auto-watch",
-    "postinstall": "jspm install",
-    "prepublish": "npm run build",
     "build": "npm run build:jspm",
     "build:jspm": "npm run clean && mkdirp dist && npm run build:jspm:dev && npm run build:jspm:prod && npm run build:jspm:es6",
     "build:jspm:dev": "jspm build src/index.js dist/<%= moduleSafeName %>.js --format global --global-name <%= moduleCamelCaseName %> --source-map-contents",
     "build:jspm:prod": "jspm build src/index.js dist/<%= moduleSafeName %>.min.js --minify --source-map-contents",
     "build:jspm:es6": "jspm build src/index.js dist/<%= moduleSafeName %>.es6.js --format esm --source-map-contents",
+    "clean": "rimraf coverage/ dist/",
+    "gh-pages": "build-scripts/gh-pages.sh",
+    "init": "git init && npm i",
+    "jsdoc": "build-scripts/jsdoc.sh",
     "lint": "eslint ./src/**/*.js",
     "lint:tests": "eslint ./src/**/*__tests__*/**/*.js",
     "lint:source": "eslint src/",
-    "clean": "rimraf coverage/ dist/"
+    "postinstall": "jspm install",
+    "prepublish": "npm run build",
+    "serve": "browser-sync start --server --files \"**/*.js, **/*.css, **/*.html, !node_modules/**/*\"",
+    "serve:doc": "browser-sync start --server \"docs/<%= moduleSafeName %>/$(sed -nE 's/^\s*\"version\": \"(.*?)\",$/\1/p' package.json)\" --files \"**/*.js, README.md, !node_modules/**/*\"",
+    "tdd:js": "npm run lint && npm run test",
+    "test": "npm run test:browser",
+    "test:browser": "karma start ./karma.conf.js --no-auto-watch",
+    "watach": "npm-run-all -p serve watch:js",
+    "watch:js": "onchange \"src/**/*.{js,json}\" -- npm run tdd:js"
   },
   "main": "dist/<%= moduleSafeName %>.min.js",
   "jsnext:main": "src/index.js",
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
-    "babel-eslint": "^7.0.0",
-    "babel-polyfill": "^6.13.0",
+    "babel-eslint": "^7.1.1",
+    "babel-polyfill": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "browser-sync": "^2.17.5",
+    "browser-sync": "^2.18.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "del": "^2.2.2",
@@ -77,6 +84,8 @@
     "mocha-lcov-reporter": "^1.2.0",
     "mock-browser": "^0.92.10",
     "npm-check-updates": "^2.5.8",
+    "npm-run-all": "^3.1.2",
+    "onchange": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.4",
     "pre-commit": "^1.1.2",
     "rimraf": "^2.5.2",
